--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@types/node": "^17.0.41",
     "@types/react": "^18.0.12",
+    "miragejs": "^0.1.45",
     "typescript": "^4.7.3"
   }
 }
