--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/faker": "^6.6.9",
     "@types/node": "^17.0.41",
     "@types/react": "^18.0.12",
+    "faker": "^5.5.3",
     "miragejs": "^0.1.45",
     "typescript": "^4.7.3"
   }
